# rustc_codegen_ferb

./: .build.yml  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml  test.sh
.zed/: settings.json
ferb/: Cargo.toml
ferb/src/: builder.rs  examples.rs  lib.rs
franca-sys/: Cargo.toml  build.rs  exports.fr
franca-sys/src/: ir.rs  lib.rs
rustc_codegen_ferb/: Cargo.toml  notes.txt
rustc_codegen_ferb/src/: emit.rs  extra.rs  intrinsic.rs  lib.rs
tests/: call.rs  custom_alloc.rs  hello.rs  indexing.rs  loop.rs  main.fr  mandel.rs
